-beautify login interface -fixed background problem -made add invoice page (with minor issues: overflow)

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,16 +1,27 @@
 *{
     overflow: hidden;
 }
-.container-fluid{
-    background-color: #f0f3bd;
+/* .body{
+    background-color: #012e4b;
     height: 100vh;
-   
+    */
+
+.plaza{
+   /*  background-color: #f7fefb; */
+   background-color:  #6ea1be;
+/*     z-index: 10;
+    height: 80%;
+    width: 90%; */
+}
+.mall{
+    background-color: #f7fefb;
+    height: 90%;
+    width: 95%;
+    border-radius: 10px;
 }
 
-
-
 #sidebar{
-    background-color: #02c39a;
+    background-color: #ffd1b9;
     height: 100vh;
     
 }
